# my-youtube

./: .gitignore  GEMINI.md  Prompts.txt  compliments.txt  directive_hvac_scrape.md  explanation_missing_greenapi_token.txt  github_actions.txt  kohli_histogram_report.py  package-lock.json  package.json  server.py  transcript.txt  whatsapp.txt
.github/: copilot-instructions.md
.wwebjs_cache/: 2.3000.1032416824.html  2.3000.1032417613.html  2.3000.1032418277.html
clients/: .gitkeep
directives/: clickup_create_task.md  clickup_crm_agent.md  clickup_delete_task.md  clickup_get_task.md  clickup_update_task.md  onboard_client.md  process_replies.md  scrape_hvac_companies.md  whatsapp-execution.md  whatsapp_wrapper.md
execution/: analyze_rcb_chat.py  check_emails.py  check_status.py  clickup_client.py  clickup_create_task.py  clickup_discover.py  clickup_get_task.py  clickup_universal.py  clickup_update_task.py  discover_clickup.py  find_contact.js  get_kohli_stats.py  hvac_to_google_sheet.py  import argparse.py  json_to_csv.py  kaggle_rcb_service.ipynb  list_groups.js  modal_shylpa_compliment.py  payment_reminder.py  pending_payments.json  personalize_hvac_data.py  rcb_payment_manager.py  rcb_poll_voter.js  recurring_rcb_poll.py  run_all_tasks.py  run_hvac_pipeline.py  scrape_hvac_texas.py  send_email.py  send_hello_rcb.py  (+7 more)
execution/mcp_servers/whatsapp-mcp-server/: .env-template  Dockerfile  LICENSE  README.md  pyproject.toml
execution/mcp_servers/whatsapp-mcp-server/src/whatsapp_mcp/: __init__.py  main.py  models.py  server.py
execution/mcp_servers/whatsapp-mcp-server/src/whatsapp_mcp/modules/: __init__.py  auth.py  group.py  message.py
execution/mcp_servers/whatsapp-mcp-server/tests/: __init__.py  test_models.py  test_server.py
(+87 files in other folders)
